--- a/frequency-domain-monaural/CRN/decode.ipynb
+++ b/frequency-domain-monaural/CRN/decode.ipynb
@@ -196,6 +196,15 @@
    "source": [
     "Audio(noisy_audio.numpy(), rate=16000)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
