--- a/frequency-domain-monaural/LSTM/plot.ipynb
+++ b/frequency-domain-monaural/LSTM/plot.ipynb
@@ -9,7 +9,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "loss = np.load(\"loss.npy\", allow_pickle=True).tolist()\n",
+    "loss = np.load(\"loss/loss.npy\", allow_pickle=True).tolist()\n",
     "test_loss = np.load(\"test_loss.npy\")\n",
     "train_loss = loss['train_loss']\n",
     "valid_loss = loss['valid_loss']"
@@ -54,7 +54,7 @@
     "plt.xlabel(\"epoch\")\n",
     "plt.ylabel(\"loss\")\n",
     "plt.legend([\"train loss\", \"valid loss\"])\n",
-    "plt.savefig(\"loss.png\")\n",
+    "plt.savefig(\"images/loss.png\")\n",
     "plt.show()"
    ]
   }
