--- a/speechQuality/QualityNetPOLQA/test.ipynb
+++ b/speechQuality/QualityNetPOLQA/test.ipynb
@@ -112,12 +112,42 @@
    "execution_count": 104
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-08T08:18:49.674517Z",
+     "start_time": "2024-05-08T08:18:49.656519Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import time\n",
+    "from progressbar import ProgressBar, Percentage, Bar, Timer, ETA\n",
+    "\n",
+    "widgets = ['Progress: ',Percentage(), ' ', Bar('#'),' ', Timer(),\n",
+    "           ' ', ETA()]\n",
+    "progress = ProgressBar(widgets=widgets).start()\n",
+    "for i in progress(range(100)):\n",
+    "    time.sleep(0.04)"
+   ],
+   "id": "537a11ccfec2ea31",
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Progress:   0% |                         | Elapsed Time: 0:00:00 ETA:  --:--:--\r"
+     ]
+    }
+   ],
+   "execution_count": 11
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "537a11ccfec2ea31"
+   "id": "5a4b6c7d71f8275b"
   }
  ],
  "metadata": {
