--- a/speechQuality/QualityNetPOLQA/test.ipynb
+++ b/speechQuality/QualityNetPOLQA/test.ipynb
@@ -2,29 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 95,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
      "end_time": "2024-05-07T06:51:55.714321Z",
      "start_time": "2024-05-07T06:51:55.707325Z"
-    }
+    },
+    "collapsed": true
    },
    "source": [
     "import torch\n",
     "data = torch.randn([1, 25088])"
    ],
-   "outputs": [],
-   "execution_count": 95
+   "outputs": []
   },
   {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "5c3c884d0072eb08",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-07T06:57:11.282634Z",
      "start_time": "2024-05-07T06:57:11.270636Z"
     }
    },
-   "cell_type": "code",
    "source": [
     "x1 = torch.concat([data, torch.zeros([1, 512])], dim=1)\n",
     "x2 = data\n",
@@ -35,60 +37,48 @@
     "y2 = torch.concat([y2[:,:, :-1], y_, torch.zeros([1, 257, y1.shape[2]-y2.shape[2]])], dim=2)\n",
     "# y2 = torch.concat([y2, torch.zeros([1, 257, y1.shape[2]-y2.shape[2]])], dim=2)"
    ],
-   "id": "5c3c884d0072eb08",
-   "outputs": [],
-   "execution_count": 101
+   "outputs": []
   },
   {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "c08a4fefcab4c9fd",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-07T06:57:12.068638Z",
      "start_time": "2024-05-07T06:57:12.063637Z"
     }
    },
-   "cell_type": "code",
-   "source": "print(torch.sum(torch.abs(torch.abs(y1[:,:, 99]) - torch.abs(y2[:,:, 99]))))",
-   "id": "c08a4fefcab4c9fd",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor(0.)\n"
-     ]
-    }
+   "source": [
+    "print(torch.sum(torch.abs(torch.abs(y1[:,:, 99]) - torch.abs(y2[:,:, 99]))))"
    ],
-   "execution_count": 102
+   "outputs": []
   },
   {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "2cbf6bdb10170a07",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-07T06:57:12.676633Z",
      "start_time": "2024-05-07T06:57:12.656637Z"
     }
    },
-   "cell_type": "code",
-   "source": "print(torch.sum(torch.abs(torch.abs(y1) - torch.abs(y2))))",
-   "id": "2cbf6bdb10170a07",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor(0.)\n"
-     ]
-    }
+   "source": [
+    "print(torch.sum(torch.abs(torch.abs(y1) - torch.abs(y2))))"
    ],
-   "execution_count": 103
+   "outputs": []
   },
   {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "fcb83b2f6e640d00",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-07T07:02:18.568759Z",
      "start_time": "2024-05-07T07:02:18.553759Z"
     }
    },
-   "cell_type": "code",
    "source": [
     "x1 = torch.concat([data, torch.zeros([1, 512])], dim=1)\n",
     "x2 = data\n",
@@ -99,26 +89,18 @@
     "y2 = torch.concat([y2, y_, torch.zeros([1, 257, y1.shape[2]-y2.shape[2]-1])], dim=2)\n",
     "print(torch.sum(torch.abs(torch.abs(y1) - torch.abs(y2))))"
    ],
-   "id": "fcb83b2f6e640d00",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor(0.)\n"
-     ]
-    }
-   ],
-   "execution_count": 104
+   "outputs": []
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "537a11ccfec2ea31",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-08T08:18:49.674517Z",
      "start_time": "2024-05-08T08:18:49.656519Z"
     }
    },
-   "cell_type": "code",
    "source": [
     "import time\n",
     "from progressbar import ProgressBar, Percentage, Bar, Timer, ETA\n",
@@ -129,17 +111,26 @@
     "for i in progress(range(100)):\n",
     "    time.sleep(0.04)"
    ],
-   "id": "537a11ccfec2ea31",
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Progress:   0% |                         | Elapsed Time: 0:00:00 ETA:  --:--:--\r"
-     ]
-    }
+   "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "5a4b6c7d71f8275b",
+   "metadata": {},
+   "source": [
+    "with open(\"wav_polqa.list\", \"r\", encoding=\"utf-8\") as f:\n",
+    "    li = f.read().splitlines()\n",
+    "\n",
+    "import random\n",
+    "random.shuffle(li)\n",
+    "\n",
+    "li_ = li[:5000]\n",
+    "with open(\"wav_polqa_mini.list\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    for l in li_:\n",
+    "        f.write(l+\"\\n\")\n"
    ],
-   "execution_count": 11
+   "outputs": []
   },
   {
    "metadata": {},
@@ -147,7 +138,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "5a4b6c7d71f8275b"
+   "id": "cc81537b1e2d416d"
   }
  ],
  "metadata": {
@@ -159,14 +150,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
