add cnn and lstm attn

--- a/speechQuality/QualityNetPOLQA/test.ipynb
+++ b/speechQuality/QualityNetPOLQA/test.ipynb
@@ -118,8 +118,8 @@
    "id": "5a4b6c7d71f8275b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T10:37:15.124089Z",
-     "start_time": "2024-05-09T10:37:14.997088Z"
+     "end_time": "2024-05-10T07:34:28.290872Z",
+     "start_time": "2024-05-10T07:34:28.117872Z"
     }
    },
    "source": [
@@ -129,13 +129,13 @@
     "import random\n",
     "random.shuffle(li)\n",
     "\n",
-    "li_ = li[:2000]\n",
-    "with open(\"wav_polqa_mini.list\", \"w\", encoding=\"utf-8\") as f:\n",
+    "li_ = li[:20000]\n",
+    "with open(\"wav_polqa_mid.list\", \"w\", encoding=\"utf-8\") as f:\n",
     "    for l in li_:\n",
     "        f.write(l+\"\\n\")\n"
    ],
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 20
   },
   {
    "metadata": {
