--- a/speechQuality/QualityNetPOLQA/load_polqa.ipynb
+++ b/speechQuality/QualityNetPOLQA/load_polqa.ipynb
@@ -2,66 +2,69 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
      "end_time": "2024-05-07T03:17:36.643876Z",
      "start_time": "2024-05-07T03:17:35.156877Z"
-    }
+    },
+    "collapsed": true
    },
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import os\n"
-   ],
-   "execution_count": 1,
-   "outputs": []
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "8702ef02b80f00f8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-07T03:28:41.465453Z",
      "start_time": "2024-05-07T03:28:28.201454Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "nearend_excel = r\"D:\\work\\speechEnhancement\\speechQuality\\PQLQA结果.xlsx\"\n",
     "mic_excel = r\"D:\\work\\speechEnhancement\\speechQuality\\PQLQA结果_mic.xlsx\"\n",
     "\n",
     "nearend = pd.read_excel(nearend_excel)\n",
     "mic = pd.read_excel(mic_excel)\n"
-   ],
-   "id": "8702ef02b80f00f8",
-   "execution_count": 6,
-   "outputs": []
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "627ec28b5d6b0f1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-07T03:28:43.962453Z",
      "start_time": "2024-05-07T03:28:43.942458Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "nearend_Filename = nearend.iloc[:,0]\n",
     "nearend_moslqo = nearend.iloc[:,2]\n",
     "mic_Filename = mic.iloc[:,0]\n",
     "mic_moslqo = mic.iloc[:,2]"
-   ],
-   "id": "627ec28b5d6b0f1",
-   "execution_count": 7,
-   "outputs": []
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "69b34defe353536c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-07T04:23:09.993494Z",
      "start_time": "2024-05-07T04:23:08.495494Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "with open(\"wav_polqa.list\", \"w\", encoding=\"utf-8\") as f:\n",
     "    for i in range(len(nearend_Filename)):\n",
@@ -81,18 +84,26 @@
     "        if polqa > 5:\n",
     "            polqa = polqa / 10000\n",
     "        f.write(full_filename + \",\" + format(polqa, \".2f\") + \"\\n\")"
-   ],
-   "id": "69b34defe353536c",
-   "execution_count": 19,
-   "outputs": []
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "execution_count": null,
-   "source": "",
+   "execution_count": 6,
    "id": "8221c69974f250cf",
-   "outputs": []
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"wav_se.list\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    for it in nearend_Filename:\n",
+    "        noise_wav = os.path.join(r\"D:\\work\\speechEnhancement\\datasets\\dns_to_liang\", it)\n",
+    "        clean_wav = os.path.join(r\"D:\\work\\speechEnhancement\\datasets\\dns_to_liang\", it.split(\"_\")[0]+\"_target.wav\")\n",
+    "        f.write(noise_wav + \",\" + clean_wav + \"\\n\")\n",
+    "    \n",
+    "    for it in mic_Filename:\n",
+    "        noise_wav = os.path.join(r\"D:\\work\\speechEnhancement\\datasets\\dns_to_liang\", it)\n",
+    "        clean_wav = os.path.join(r\"D:\\work\\speechEnhancement\\datasets\\dns_to_liang\", it.split(\"_\")[0]+\"_target.wav\")\n",
+    "        f.write(noise_wav + \",\" + clean_wav + \"\\n\")\n"
+   ]
   }
  ],
  "metadata": {
@@ -104,14 +115,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
