--- a/speechQuality/QualityNetPOLQA/load_polqa.ipynb
+++ b/speechQuality/QualityNetPOLQA/load_polqa.ipynb
@@ -11,12 +11,12 @@
     },
     "collapsed": true
    },
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import os\n"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
@@ -28,14 +28,14 @@
      "start_time": "2024-05-14T08:38:47.757171Z"
     }
    },
+   "outputs": [],
    "source": [
     "nearend_excel = r\"D:\\work\\speechEnhancement\\speechQuality\\PQLQA结果.xlsx\"\n",
     "mic_excel = r\"D:\\work\\speechEnhancement\\speechQuality\\PQLQA结果_mic.xlsx\"\n",
     "\n",
     "nearend = pd.read_excel(nearend_excel)\n",
     "mic = pd.read_excel(mic_excel)\n"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
@@ -47,13 +47,13 @@
      "start_time": "2024-05-14T08:39:07.945023Z"
     }
    },
+   "outputs": [],
    "source": [
     "nearend_Filename = nearend.iloc[:,0]\n",
     "nearend_moslqo = nearend.iloc[:,2]\n",
     "mic_Filename = mic.iloc[:,0]\n",
     "mic_moslqo = mic.iloc[:,2]"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
@@ -65,6 +65,7 @@
      "start_time": "2024-05-07T04:23:08.495494Z"
     }
    },
+   "outputs": [],
    "source": [
     "with open(\"wav_polqa.list\", \"w\", encoding=\"utf-8\") as f:\n",
     "    for i in range(len(nearend_Filename)):\n",
@@ -84,14 +85,14 @@
     "        if polqa > 5:\n",
     "            polqa = polqa / 10000\n",
     "        f.write(full_filename + \",\" + format(polqa, \".2f\") + \"\\n\")"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "id": "8221c69974f250cf",
    "metadata": {},
+   "outputs": [],
    "source": [
     "with open(\"wav_se.list\", \"w\", encoding=\"utf-8\") as f:\n",
     "    for it in nearend_Filename:\n",
@@ -103,8 +104,7 @@
     "        noise_wav = os.path.join(r\"D:\\work\\speechEnhancement\\datasets\\dns_to_liang\", it)\n",
     "        clean_wav = os.path.join(r\"D:\\work\\speechEnhancement\\datasets\\dns_to_liang\", it.split(\"_\")[0]+\"_target.wav\")\n",
     "        f.write(noise_wav + \",\" + clean_wav + \"\\n\")\n"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
@@ -116,6 +116,7 @@
      "start_time": "2024-05-14T08:56:10.612413Z"
     }
    },
+   "outputs": [],
    "source": [
     "total_wav = []\n",
     "total_mos = []\n",
@@ -149,8 +150,7 @@
     "#         noise_wav = os.path.join(r\"D:\\work\\speechEnhancement\\datasets\\dns_to_liang\", wav)\n",
     "#         clean_wav = os.path.join(r\"D:\\work\\speechEnhancement\\datasets\\dns_to_liang\", wav.split(\"_\")[0]+\"_target.wav\")\n",
     "#         f.write(noise_wav + \",\" + clean_wav + \"\\n\")"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
@@ -162,6 +162,7 @@
      "start_time": "2024-05-14T08:49:01.132613Z"
     }
    },
+   "outputs": [],
    "source": [
     "length = 90000\n",
     "import random\n",
@@ -190,16 +191,37 @@
     "        noise_wav = os.path.join(r\"D:\\work\\speechEnhancement\\datasets\\dns_to_liang\", wav)\n",
     "        f.write(noise_wav + \",\" + format(mos, \".2f\") + \"\\n\")\n",
     "        # f.write(noise_wav + \",\" + clean_wav + \"\\n\")"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "6518aa7a74f5d0d0",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-15T15:33:56.511489Z",
+     "start_time": "2024-05-15T15:33:56.440492Z"
+    }
+   },
+   "source": [
+    "files = []\n",
+    "with open(\"wav_train_se.list\", \"r\", encoding=\"utf-8\") as f:\n",
+    "    files = f.read().splitlines()\n",
+    "\n",
+    "\n",
+    "with open(\"wav_train_smini_se.list\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    for file in files[:200]:\n",
+    "        f.write(file + \"\\n\")\n"
+   ],
+   "outputs": [],
+   "execution_count": 1
+  },
+  {
    "metadata": {},
-   "source": [],
-   "outputs": []
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "46767767857e8ff0"
   }
  ],
  "metadata": {
